# spectre_control

./: Cargo.toml  readme.md
assets/fragments/: circle.wgsl  grids.wgsl  lines.wgsl
assets/utility/: output.wgsl
assets/utility_shaders/: ewewewewe.wgsl  frag_utility.wgsl  frame.wgsl  sample.wgsl  shader_fallback.wgsl
ff_macros/: Cargo.toml  ff_uniforms.rs  wgsl_types.rs
ff_macros/src/: lib.rs
ff_macros/wgsl/: shader_challenge.wgsl
src/: main.rs  serial_handler.rs  shader_ui.rs  sub_divide.rs
src/shader_backend/: bindgroups.rs  mod.rs  shader_primitives.rs  shapes.rs
