[package]
name = "fluff"
version = "0.1.0"
edition = "2021"
resolver = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

nannou = "0.18.1"
nannou_egui = "0.5.0"

bytemuck = { version = "1.4", features = [ "derive" ] }


serde = "1.0.160"
serde_json = "1.0.96"
# ff_macros = { path = "ff_macros" }

hecs = "0.10.3"
serial2 = "0.2.1"
ascii = "1.1.0"


# [ff_uniforms]
# proc-macro = true
